--- a/app/styles/layout.module.css
+++ b/app/styles/layout.module.css
@@ -17,6 +17,13 @@
 
 .header {
   grid-area: header;
+  width: 100%;
+    position: sticky;
+    z-index: 10;
+    top: -1px;
+    margin: 0;
+    background: white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);   
 }
 
 .main {
@@ -36,15 +43,6 @@
   justify-self: center;
 }
 
-.nav {
-  grid-area: nav;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
-  padding: 8px;
-  font-size: calc(10px + 2vmin);
-}
 
 .link:hover {
   text-decoration: underline;
